--- a/src/Resources/css/app.css
+++ b/src/Resources/css/app.css
@@ -820,13 +820,14 @@ z-index: 1;
 
 .home_meetplayers .home_card_wrapper {
     position: relative;
-    float: left;
+    justify-content: center;
+    align-self: center;
     width: 630px;
     min-height: 600px;
 }
 
 .home_meetplayers .home_text_wrapper {
-    float: right;
+   align-self: center;
     width: 390px;
 }
 
@@ -994,6 +995,7 @@ z-index: 1;
 
 .promotion_wrapper .enroll_wrapper {
     text-align: center;
+  
 }
 
 .promotion_wrapper .enroll_title {
@@ -1219,6 +1221,367 @@ z-index: 1;
 .team_category_wrapper .team_cards .item{
     margin-right: 20px;
     margin-bottom: 20px;
+}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.teamCarousel {
+    height: 100vh;
+    margin-top: -50px;
+    width: 100vw;
+    overflow: hidden;
+    position: relative;
+}
+
+.teamCarousel .list {
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.teamCarousel .list .item {
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.teamCarousel .list .item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.teamCarousel .list .item .content {
+    position: absolute;
+    top: 20%;
+    width: 1140px;
+    max-width: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-right: 30%;
+    box-sizing: border-box;
+    color: #fff;
+    text-shadow: 0 5px 10px #0004;
+    z-index: 1;
+}
+
+.teamCarousel .list .item .author {
+    font-weight: bold;
+    letter-spacing: 10px;
+}
+
+.teamCarousel .list .item .title,
+.teamCarousel .list .item .topic {
+    font-size: 2em;
+    font-weight: bold;
+    line-height: 1.3em;
+}
+
+.teamCarousel .list .item .topic {
+    color: #f1683a;
+}
+
+.teamCarousel .list .item .des {
+    margin-top: 1em;
+}
+
+.teamCarousel .list .item .buttons {
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    grid-template-rows: 40px;
+    gap: 5px;
+    margin-top: 20px;
+}
+
+.teamCarousel .list .item .buttons button {
+    /* border: none;
+    background-color: #eee;
+    letter-spacing: 3px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    cursor: pointer; */
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #eee;
+}
+
+.teamCarousel .list .item .buttons button:nth-child(2) {
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #eee;
+}
+
+/* Thumbnail */
+.teamCarousel .thumbnail {
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    width: max-content;
+    z-index: 100;
+    display: flex;
+    gap: 20px;
+    transform: translateX(-50%);
+}
+
+.teamCarousel .thumbnail .item {
+    width: 150px;
+    height: 220px;
+    flex-shrink: 0;
+    position: relative;
+}
+
+.teamCarousel .thumbnail .item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.teamCarousel .thumbnail .item .content {
+    color: #fff;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+}
+
+.teamCarousel .thumbnail .item .content .title {
+    font-weight: 500;
+}
+
+.teamCarousel .thumbnail .item .content .description {
+    font-weight: 300;
+}
+
+/* Arrows */
+.teamCarousel .arrows {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+    z-index: 100;
+}
+
+.teamCarousel .arrows button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #eee4;
+    border: none;
+    color: #fff;
+    font-family: monospace;
+    font-weight: bold;
+    transition: .5s;
+    cursor: pointer;
+}
+
+.teamCarousel .arrows button:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+/* Animation */
+.teamCarousel .list .item:nth-child(1) {
+    z-index: 1;
+}
+
+.teamCarousel .list .item:nth-child(1) .content .author,
+.teamCarousel .list .item:nth-child(1) .content .title,
+.teamCarousel .list .item:nth-child(1) .content .topic,
+.teamCarousel .list .item:nth-child(1) .content .des,
+.teamCarousel .list .item:nth-child(1) .content .buttons {
+    transform: translateY(50px);
+    filter: blur(20px);
+    opacity: 0;
+    animation: showContent .5s 1s linear 1 forwards;
+}
+
+@keyframes showContent {
+    to {
+        transform: translateY(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
+
+.teamCarousel .list .item:nth-child(1) .content .title {
+    animation-delay: 1.2s !important;
+}
+
+.teamCarousel .list .item:nth-child(1) .content .topic {
+    animation-delay: 1.4s !important;
+}
+
+.teamCarousel .list .item:nth-child(1) .content .des {
+    animation-delay: 1.6s !important;
+}
+
+.teamCarousel .list .item:nth-child(1) .content .buttons {
+    animation-delay: 1.8s !important;
+}
+
+.teamCarousel.next .list .item:nth-child(1) img {
+    width: 150px;
+    height: 220px;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    border-radius: 30px;
+    animation: showImage .5s linear 1 forwards;
+}
+
+@keyframes showImage {
+    to {
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
+
+.teamCarousel.next .thumbnail .item:nth-last-child(1) {
+    overflow: hidden;
+    animation: showThumbnail .5s linear 1 forwards;
+}
+
+.teamCarousel.prev .list .item img {
+    z-index: 100;
+}
+
+@keyframes showThumbnail {
+    from {
+        width: 0;
+        opacity: 0;
+    }
+}
+
+.teamCarousel.next .thumbnail {
+    animation: effectNext .5s linear 1 forwards;
+}
+
+@keyframes effectNext {
+    from {
+        transform: translateX(150px);
+    }
+}
+
+.teamCarousel .time {
+    position: absolute;
+    z-index: 1000;
+    width: 0%;
+    height: 3px;
+    background-color: #f1683a;
+    left: 0;
+    top: 0;
+}
+
+.teamCarousel.next .time,
+.teamCarousel.prev .time {
+    animation: runningTime 3s linear 1 forwards;
+}
+
+@keyframes runningTime {
+    from {
+        width: 100%;
+    }
+    to {
+        width: 0;
+    }
+}
+
+.teamCarousel.prev .list .item:nth-child(2) {
+    z-index: 2;
+}
+
+.teamCarousel.prev .list .item:nth-child(2) img {
+    animation: outFrame 0.5s linear 1 forwards;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+@keyframes outFrame {
+    to {
+        width: 150px;
+        height: 220px;
+        bottom: 50px;
+        left: 50%;
+        border-radius: 20px;
+    }
+}
+
+.teamCarousel.prev .thumbnail .item:nth-child(1) {
+    overflow: hidden;
+    opacity: 0;
+    animation: showThumbnail .5s linear 1 forwards;
+}
+
+.teamCarousel.next .arrows button,
+.teamCarousel.prev .arrows button {
+    pointer-events: none;
+}
+
+.teamCarousel.prev .list .item:nth-child(2) .content .author,
+.teamCarousel.prev .list .item:nth-child(2) .content .title,
+.teamCarousel.prev .list .item:nth-child(2) .content .topic,
+.teamCarousel.prev .list .item:nth-child(2) .content .des,
+.teamCarousel.prev .list .item:nth-child(2) .content .buttons {
+    animation: contentOut 1.5s linear 1 forwards !important;
+}
+
+@keyframes contentOut {
+    to {
+        transform: translateY(-150px);
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+
+@media screen and (max-width: 678px) {
+    .teamCarousel .list .item .content {
+        padding-right: 0;
+    }
+    .teamCarousel .list .item .content .title {
+        font-size: 30px;
+    }
+}
+
+/*============================
+|   |   | ENROLL    |   |   |
+==============================*/
+.enroll_wrapper {
+    text-align: center;
+    background-image: url(".../../../images/stripes.png"); /* Replace with actual path */
+  background-color: #ffffff
+}
+
+.enroll_title {
+    font-family: 'Righteous', cursive;
+    font-size: 26px;
+    color: #4e4e4e;
+}
+.enroll_discl {
+    font-weight: 300;
+    font-size: 12px;
+    width: 271px;
+    margin: 0 auto;
+    padding: 10px 0px;
+}
+
+.enroll_input {
+    width: 330px;
+    margin: 0 auto;
+    padding: 10px 0px;
 }
 
 /*=============================
